media box shadow updates

--- a/app/assets/stylesheets/media_objects.css.sass
+++ b/app/assets/stylesheets/media_objects.css.sass
@@ -8,6 +8,7 @@
   padding: 10px
   background: white
   text-align: center
+  font-weight: bold
   img
     width: 100%
     margin-bottom: 10px
@@ -17,12 +18,12 @@
     position: absolute
     z-index: -1
     bottom: 15px
-    left: 5%
-    width: 90%
+    left: 2%
+    width: 96%
     height: 20%
-    -webkit-box-shadow: 0 15px 10px rgba(0, 0, 0, 0.7)
-    -moz-box-shadow: 0 15px 10px rgba(0, 0, 0, 0.7)
-    box-shadow: 0 15px 10px rgba(0, 0, 0, 0.7)
+    -webkit-box-shadow: 0 15px 10px gray
+    -moz-box-shadow: 0 15px 10px gray
+    box-shadow: 0 15px 10px gray
   &:after
     -webkit-transform: rotate(2deg)
     -moz-transform: rotate(2deg)
