new visitor homepage updates

--- a/app/assets/stylesheets/media_objects.css.sass
+++ b/app/assets/stylesheets/media_objects.css.sass
@@ -9,6 +9,7 @@
   background: white
   text-align: center
   font-weight: bold
+  margin-bottom: 20px
   img
     width: 100%
     margin-bottom: 10px
