--- a/app/views/home/new_visitor_homepage.html.haml
+++ b/app/views/home/new_visitor_homepage.html.haml
@@ -11,10 +11,71 @@
 
 .row
   .span12
-    %h2.text-center We offer a variety of cooking courses...
-    .row
+    .row.section
+      %h2.text-center We offer a variety of cooking courses...
       - @courses.each do |course|
         .span4
           .media-box
             = image_tag filepicker_gallery_image(course.first_published_activity.featured_image)
             = course.title
+
+    .row.section
+      .span8
+        %p.lead 
+          %strong And teachers and community to help you succeed.
+          %br
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi pretium elit nec tortor ultrices rhoncus. Vestibulum malesuada lacus eu nibh fringilla convallis. Maecenas quis dui nisi, id lobortis nulla. Phasellus fringilla sem in dolor ornare tempus. Curabitur nec bibendum urna.
+      .span4
+        .media-box
+          = image_tag filepicker_gallery_image(@courses.first.first_published_activity.featured_image)
+          = @courses.first.title
+
+    .row.section
+      %h2.text-center Or just take in smaller bits...
+      .span6
+        %p.lead
+          %strong Learn a New Recipe.
+          %br
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi pretium elit nec tortor ultrices rhoncus. Vestibulum malesuada lacus eu nibh fringilla convallis. Maecenas quis dui nisi, id lobortis nulla. Phasellus fringilla sem in dolor ornare tempus. Curabitur nec bibendum urna.
+      .span6
+        .media-box
+          = image_tag filepicker_gallery_image(@courses.first.first_published_activity.featured_image)
+          = @courses.first.title
+
+    .row.section
+      .span6
+        .media-box
+          = image_tag filepicker_gallery_image(@courses.first.first_published_activity.featured_image)
+          = @courses.first.title
+      .span6
+        %p.lead
+          %strong Pefect a New Technique
+          %br
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi pretium elit nec tortor ultrices rhoncus. Vestibulum malesuada lacus eu nibh fringilla convallis. Maecenas quis dui nisi, id lobortis nulla. Phasellus fringilla sem in dolor ornare tempus. Curabitur nec bibendum urna.
+
+    .row.section
+      .span6
+        %p.lead
+          %strong Absorb the Science.
+          %br
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi pretium elit nec tortor ultrices rhoncus. Vestibulum malesuada lacus eu nibh fringilla convallis. Maecenas quis dui nisi, id lobortis nulla. Phasellus fringilla sem in dolor ornare tempus. Curabitur nec bibendum urna.
+      .span6
+        .media-box
+          = image_tag filepicker_gallery_image(@courses.first.first_published_activity.featured_image)
+          = @courses.first.title
+
+    .row.section
+      %h2.text-center Did we mention its free?
+      .span6
+        %p.lead
+          %strong Some lead title.
+          %br
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi pretium elit nec tortor ultrices rhoncus. Vestibulum malesuada lacus eu nibh fringilla convallis. Maecenas quis dui nisi, id lobortis nulla. Phasellus fringilla sem in dolor ornare tempus. Curabitur nec bibendum urna.
+      .span6
+        We'll keep you up to date with the latest from ChefSteps.  We don't like spam, and we don't do shady stuff with your info.
+        = form_tag sign_up_url, :method => :get, class: 'form-inline' do
+          %p= email_field_tag 'email', nil, {class: 'input-signup-email', placeholder: 'Email Address', required: true}
+          %p= submit_tag 'Subscribe Now', class: 'btn btn-primary btn-large', id: 'subscribe-email'
+
+= content_for :footer do
+  = render 'layouts/footer'
