--- a/app/views/activities/get_show_partial.js.haml
+++ b/app/views/activities/get_show_partial.js.haml
@@ -1,2 +1,3 @@
 $('.wysiwyg-active').fadeOut('fast', function() { $(this).html("#{j render partial: 'show_' + partial_name}").fadeIn()})
 $('.wysiwyg-active').removeClass('wysiwyg-active')
+prepareForScaling()
