--- a/app/views/home/new_visitor_homepage.html.haml
+++ b/app/views/home/new_visitor_homepage.html.haml
@@ -13,11 +13,12 @@
   .span12
     .row.section
       %h2.text-center We offer a variety of cooking courses...
-      - @courses.each do |course|
-        .span4
-          .media-box
-            = image_tag filepicker_gallery_image(course.first_published_activity.featured_image)
-            = course.title
+      - if @courses.any?
+        - @courses.each do |course|
+          .span4
+            .media-box
+              = image_tag filepicker_gallery_image(course.first_published_activity.featured_image)
+              = course.title
 
     .row.section
       .span8
@@ -27,8 +28,9 @@
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi pretium elit nec tortor ultrices rhoncus. Vestibulum malesuada lacus eu nibh fringilla convallis. Maecenas quis dui nisi, id lobortis nulla. Phasellus fringilla sem in dolor ornare tempus. Curabitur nec bibendum urna.
       .span4
         .media-box
-          = image_tag filepicker_gallery_image(@courses.first.first_published_activity.featured_image)
-          = @courses.first.title
+          - if @courses.any?
+            = image_tag filepicker_gallery_image(@courses.first.first_published_activity.featured_image)
+            = @courses.first.title
 
     .row.section
       %h2.text-center Or just take in smaller bits...
@@ -39,14 +41,16 @@
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi pretium elit nec tortor ultrices rhoncus. Vestibulum malesuada lacus eu nibh fringilla convallis. Maecenas quis dui nisi, id lobortis nulla. Phasellus fringilla sem in dolor ornare tempus. Curabitur nec bibendum urna.
       .span6
         .media-box
-          = image_tag filepicker_gallery_image(@courses.first.first_published_activity.featured_image)
-          = @courses.first.title
+          - if @recipes.any?
+            = image_tag filepicker_gallery_image(@recipes.first.featured_image)
+            = @recipes.first.title
 
     .row.section
       .span6
         .media-box
-          = image_tag filepicker_gallery_image(@courses.first.first_published_activity.featured_image)
-          = @courses.first.title
+          - if @techniques.any?
+            = image_tag filepicker_gallery_image(@techniques.first.featured_image)
+            = @techniques.first.title
       .span6
         %p.lead
           %strong Pefect a New Technique
@@ -61,8 +65,9 @@
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi pretium elit nec tortor ultrices rhoncus. Vestibulum malesuada lacus eu nibh fringilla convallis. Maecenas quis dui nisi, id lobortis nulla. Phasellus fringilla sem in dolor ornare tempus. Curabitur nec bibendum urna.
       .span6
         .media-box
-          = image_tag filepicker_gallery_image(@courses.first.first_published_activity.featured_image)
-          = @courses.first.title
+          - if @sciences.any?
+            = image_tag filepicker_gallery_image(@sciences.first.featured_image)
+            = @sciences.first.title
 
     .row.section
       %h2.text-center Did we mention its free?
