--- a/app/views/activities/_edit_description.html.haml
+++ b/app/views/activities/_edit_description.html.haml
@@ -1,2 +1,2 @@
 = semantic_form_for [@activity], url: update_edit_partial_activity_path, :html => {:method => :post}, remote: true do |f|
-  = f.input :description, label: false, class: 'tinymce'
+  = f.input :description, label: false
