--- a/app/views/home/new_visitor_homepage.html.haml
+++ b/app/views/home/new_visitor_homepage.html.haml
@@ -40,11 +40,18 @@
           %br
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi pretium elit nec tortor ultrices rhoncus. Vestibulum malesuada lacus eu nibh fringilla convallis. Maecenas quis dui nisi, id lobortis nulla. Phasellus fringilla sem in dolor ornare tempus. Curabitur nec bibendum urna.
       .span6
-        = render 'shared/horizontal_scroller', items: @recipes
+        / = render 'shared/horizontal_scroller', items: @recipes
         / .media-box
         /   - if @recipes.any?
         /     = image_tag filepicker_gallery_image(@recipes.first.featured_image)
         /     = @recipes.first.title
+        .swipe#recipe-swiper
+          .swipe-wrap
+            - @recipes.each do |recipe|
+              = link_to activity_path(recipe) do
+                .media-box
+                  = image_tag filepicker_gallery_image(@recipes.first.featured_image)
+                  = @recipes.first.title
 
     .row.section
       .span6
