visitor homepage page updates

--- a/app/assets/stylesheets/media_objects.css.sass
+++ b/app/assets/stylesheets/media_objects.css.sass
@@ -37,3 +37,6 @@
     -ms-transform: rotate(-2deg)
     -o-transform: rotate(-2deg)
     transform: rotate(-2deg)
+
+.media-box-medium
+  width: 260px
