client side validation worketh

--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -1070,6 +1070,11 @@ h1, h2, h3, h4
   .featured-image-group
     margin-left: 40px
 
+.inline-errors
+  font-size: 14px
+  color: red
+  text-transform: uppercase
+
 // Note this is duplicated over in admin CSS - should remove from there
 .filepicker-group
   margin-bottom: 5px
