--- a/app/views/activities/_edit_title.html.haml
+++ b/app/views/activities/_edit_title.html.haml
@@ -1,2 +1,2 @@
-= semantic_form_for [@activity], url: update_edit_partial_activity_path, :html => {:method => :post}, remote: true do |f|
+= semantic_form_for [@activity], url: update_edit_partial_activity_path, :html => {:method => :post}, validate: true, remote: true do |f|
   = f.input :title, label: false, as: :text, input_html: {class: "nohtml", rows: "2"}
