--- a/app/views/admin/activities/_form.html.haml
+++ b/app/views/admin/activities/_form.html.haml
@@ -7,7 +7,7 @@
 
 / The Update Warning class will prompt the user to save the recipe before leaving the page
 .update-warning
-= semantic_form_for [:admin, @activity] do |f|
+= semantic_form_for [:admin, @activity], validate: true do |f|
   = f.inputs name: "Activity Details" do
     = f.input :published
     = f.input :title
