--- a/app/views/activities/get_edit_partial.js.haml
+++ b/app/views/activities/get_edit_partial.js.haml
@@ -1,3 +1,5 @@
-$('.wysiwyg-available').fadeOut('fast', function() { $(this).html("#{j render :partial => 'edit_' + partial_name}").fadeIn()})
-$('.wysiwyg-available').removeClass('wysiwyg-available').addClass('wysiwyg-active')
-$('.wysiwyg-active').promise().done(function() { wysiwygActivatedCallback('.wysiwyg-active') })
+sel = '*[data-edit_id="' + "#{j edit_id}" + '"]'
+elem = $(sel).get()
+$(elem).fadeOut('fast', function() { $(this).html("#{j render :partial => 'edit_' + partial_name}").fadeIn()})
+$(elem).removeClass('wysiwyg-available').addClass('wysiwyg-active')
+$(elem).promise().done(function() { wysiwygActivatedCallback(elem) })
