--- a/app/views/activities/get_show_partial.js.haml
+++ b/app/views/activities/get_show_partial.js.haml
@@ -1,3 +1,5 @@
-$('.wysiwyg-active').fadeOut('fast', function() { $(this).html("#{j render partial: 'show_' + partial_name}").fadeIn()})
-$('.wysiwyg-active').promise().done(function() { wysiwygDeactivatedCallback('.wysiwyg-active') })
+sel = '*[data-edit_id="' + "#{j edit_id}" + '"]'
+elem = $(sel).get()
+$(elem).fadeOut('fast', function() { $(this).html("#{j render partial: 'show_' + partial_name}").fadeIn()})
+$(elem).promise().done(function() { wysiwygDeactivatedCallback(elem) })
 
