add horizontal swiper

--- a/app/assets/stylesheets/media_objects.css.sass
+++ b/app/assets/stylesheets/media_objects.css.sass
@@ -10,6 +10,7 @@
   text-align: center
   font-weight: bold
   margin-bottom: 20px
+  color: black
   img
     width: 100%
     margin-bottom: 10px
@@ -39,4 +40,7 @@
     transform: rotate(-2deg)
 
 .media-box-medium
-  width: 260px
+  width: 300px
+  //margin-left: 10px
+  //margin-right: 10px
+  margin: 20px
