--- a/app/assets/stylesheets/horizontal_swiper.css.sass
+++ b/app/assets/stylesheets/horizontal_swiper.css.sass
@@ -1,5 +1,12 @@
-.horizontal-swiper-btn-right
-  position: absolute
-  top: 50%
-  right: 10px
-  margin-top: -21px
+.horizontal-swiper
+  position: relative
+  height: 248px
+  overflow: hidden
+  .horizontal-swiper-wrap
+    height: 248px
+    position: relative
+  .horizontal-swiper-btn-right
+    position: absolute
+    top: 50%
+    right: 10px
+    margin-top: -21px
