--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -1004,8 +1004,7 @@ h1, h2, h3, h4
   margin-top: 11px
   display: none
 
-#edit-target
-  display: none
+.edit-target
   @include boxsizing
   position: absolute
   top: -1%
@@ -1016,7 +1015,6 @@ h1, h2, h3, h4
   border: 2px solid #9ecaed
   border-radius: 7px
   z-index: 999
-  color: #0088cc
   background-color: rgba(158, 202, 237, 0.2)
 
 *[data-wysiwyg]
@@ -1039,9 +1037,6 @@ h1, h2, h3, h4
 #edit-mode.active
   background: #0088cc
 
-.video-container.wysiwyg-available
-  .xnoprint
-    visibility: hidden
 
 .inline-group
   display: inline-block
