toolbar coming along

--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -1004,6 +1004,14 @@ h1, h2, h3, h4
   margin-top: 11px
   display: none
 
+  i
+    font-size: 18px
+  .btn
+    height: 28px
+
+.show-when-editing
+  display: none
+
 .edit-target
   @include boxsizing
   position: absolute
