--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -21,5 +21,5 @@
  *= require mobile
  *= require diffview
  *= require media_objects
- *= require horizontal_swiper
+ *= require horizontal_slider
  */
