--- a/app/views/home/new_visitor_homepage.html.haml
+++ b/app/views/home/new_visitor_homepage.html.haml
@@ -3,23 +3,25 @@
     .row
       .span6.offset3
         = form_tag sign_up_url, :method => :get, class: 'form-inline' do
-          %h2
-            Hi ChefSteps,
-            %br
-            I am
-            = text_field_tag 'name', nil, {placeholder: 'Name', required: true}
-            and my email is
-            = email_field_tag 'email', nil, {class: 'input-signup-email', placeholder: 'Email Address', required: true}
-            &#46;
-            %br
-            I want to learn how to be a kick-ass cook.
-            %br
-          = submit_tag 'Subscribe Now', class: 'btn btn-primary btn-large', id: 'subscribe-email'
+          .madlib
+            %span.text-orange
+              Hi ChefSteps,
+            %p
+              I am
+              %span.input-underlined
+                = text_field_tag 'name', nil, {placeholder: 'name', required: true}
+              and my email is
+              %span.input-underlined
+                = email_field_tag 'email', nil, {placeholder: 'email', required: true}
+              &#46;&nbsp;&nbsp;
+            %p
+              I want to learn how to be a kick-ass cook.
+          = submit_tag 'Sign Up Now', class: 'btn btn-primary btn-large', id: 'subscribe-email'
 
 .row
   .span12
     .row.section
-      %h2.text-center We offer a variety of cooking courses...
+      %h2.text-center.text-orange We offer a variety of cooking courses...
       - if @courses.any?
         - @courses.each do |course|
           .span4
@@ -40,7 +42,7 @@
             = @courses.first.title
 
     .row.section
-      %h2.text-center Or just take in smaller bits...
+      %h2.text-center.text-orange Or just take in smaller bits...
       .span6
         %p.lead
           %strong Learn a New Recipe.
@@ -68,7 +70,7 @@
         = render 'shared/horizontal_slider', items: @sciences, direction: 'right'
 
     .row.section
-      %h2.text-center Did we mention its free?
+      %h2.text-center.text-orange Did we mention its free?
       .span6
         %p.lead
           %strong Some lead title.
