--- a/app/views/home/new_visitor_homepage.html.haml
+++ b/app/views/home/new_visitor_homepage.html.haml
@@ -1,86 +1,87 @@
-.row
-  .span12
-    .row
-      .span6.offset3
-        = form_tag sign_up_url, :method => :get, class: 'form-inline' do
-          .madlib
-            %span.text-orange
-              Hi ChefSteps,
-            %p
-              I am
-              %span.input-underlined
-                = text_field_tag 'name', nil, {placeholder: 'name', required: true}
-              and my email is
-              %span.input-underlined
-                = email_field_tag 'email', nil, {placeholder: 'email', required: true}
-              &#46;&nbsp;&nbsp;
-            %p
-              I want to learn how to be a kick-ass cook.
-          = submit_tag 'Sign Up Now', class: 'btn btn-primary btn-large', id: 'subscribe-email'
+.container#main-container
+  .row
+    .span12
+      .row
+        .span6.offset3
+          = form_tag sign_up_url, :method => :get, class: 'form-inline' do
+            .madlib
+              %span.text-orange
+                Hi ChefSteps,
+              %p
+                I am
+                %span.input-underlined
+                  = text_field_tag 'name', nil, {placeholder: 'name', required: true}
+                and my email is
+                %span.input-underlined
+                  = email_field_tag 'email', nil, {placeholder: 'email', required: true}
+                &#46;&nbsp;&nbsp;
+              %p
+                I want to learn how to be a kick-ass cook.
+            = submit_tag 'Sign Up Now', class: 'btn btn-primary btn-large', id: 'subscribe-email'
 
-.row
-  .span12
-    .row.section
-      %h2.text-center.text-orange We offer a variety of cooking courses...
-      - if @courses.any?
-        - @courses.each do |course|
-          .span4
-            .media-box
-              = image_tag filepicker_gallery_image(course.first_published_activity.featured_image)
-              = course.title
+  .row
+    .span12
+      .row.section
+        %h2.text-center.text-orange We offer a variety of cooking courses...
+        - if @courses.any?
+          - @courses.each do |course|
+            .span4
+              .media-box
+                = image_tag filepicker_gallery_image(course.first_published_activity.featured_image)
+                = course.title
 
-    .row.section
-      .span6.offset1
-        %p.lead 
-          %strong And teachers and community to help you succeed.
-          %br
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi pretium elit nec tortor ultrices rhoncus. Vestibulum malesuada lacus eu nibh fringilla convallis. Maecenas quis dui nisi, id lobortis nulla. Phasellus fringilla sem in dolor ornare tempus. Curabitur nec bibendum urna.
-      .span4
-        .media-box
-          - if @courses.any?
-            = image_tag filepicker_gallery_image(@courses.first.first_published_activity.featured_image)
-            = @courses.first.title
+      .row.section
+        .span6.offset1
+          %p.lead 
+            %strong And teachers and community to help you succeed.
+            %br
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi pretium elit nec tortor ultrices rhoncus. Vestibulum malesuada lacus eu nibh fringilla convallis. Maecenas quis dui nisi, id lobortis nulla. Phasellus fringilla sem in dolor ornare tempus. Curabitur nec bibendum urna.
+        .span4
+          .media-box
+            - if @courses.any?
+              = image_tag filepicker_gallery_image(@courses.first.first_published_activity.featured_image)
+              = @courses.first.title
 
-    .row.section
-      %h2.text-center.text-orange Or just take in smaller bits...
-      .span6
-        %p.lead
-          %strong Learn a New Recipe.
-          %br
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi pretium elit nec tortor ultrices rhoncus. Vestibulum malesuada lacus eu nibh fringilla convallis. Maecenas quis dui nisi, id lobortis nulla. Phasellus fringilla sem in dolor ornare tempus. Curabitur nec bibendum urna.
-      .span6
-        = render 'shared/horizontal_slider', items: @recipes, direction: 'right'
+      .row.section
+        %h2.text-center.text-orange Or just take in smaller bits...
+        .span6
+          %p.lead
+            %strong Learn a New Recipe.
+            %br
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi pretium elit nec tortor ultrices rhoncus. Vestibulum malesuada lacus eu nibh fringilla convallis. Maecenas quis dui nisi, id lobortis nulla. Phasellus fringilla sem in dolor ornare tempus. Curabitur nec bibendum urna.
+        .span6
+          = render 'shared/horizontal_slider', items: @recipes, direction: 'right'
 
-    .row.section
-      .span6
-        = render 'shared/horizontal_slider', items: @techniques, direction: 'left'
-      .span6
-        %p.lead
-          %strong Pefect a New Technique
-          %br
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi pretium elit nec tortor ultrices rhoncus. Vestibulum malesuada lacus eu nibh fringilla convallis. Maecenas quis dui nisi, id lobortis nulla. Phasellus fringilla sem in dolor ornare tempus. Curabitur nec bibendum urna.
+      .row.section
+        .span6
+          = render 'shared/horizontal_slider', items: @techniques, direction: 'left'
+        .span6
+          %p.lead
+            %strong Pefect a New Technique
+            %br
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi pretium elit nec tortor ultrices rhoncus. Vestibulum malesuada lacus eu nibh fringilla convallis. Maecenas quis dui nisi, id lobortis nulla. Phasellus fringilla sem in dolor ornare tempus. Curabitur nec bibendum urna.
 
-    .row.section
-      .span6
-        %p.lead
-          %strong Absorb the Science.
-          %br
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi pretium elit nec tortor ultrices rhoncus. Vestibulum malesuada lacus eu nibh fringilla convallis. Maecenas quis dui nisi, id lobortis nulla. Phasellus fringilla sem in dolor ornare tempus. Curabitur nec bibendum urna.
-      .span6
-        = render 'shared/horizontal_slider', items: @sciences, direction: 'right'
+      .row.section
+        .span6
+          %p.lead
+            %strong Absorb the Science.
+            %br
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi pretium elit nec tortor ultrices rhoncus. Vestibulum malesuada lacus eu nibh fringilla convallis. Maecenas quis dui nisi, id lobortis nulla. Phasellus fringilla sem in dolor ornare tempus. Curabitur nec bibendum urna.
+        .span6
+          = render 'shared/horizontal_slider', items: @sciences, direction: 'right'
 
-    .row.section
-      %h2.text-center.text-orange Did we mention its free?
-      .span6
-        %p.lead
-          %strong Some lead title.
-          %br
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi pretium elit nec tortor ultrices rhoncus. Vestibulum malesuada lacus eu nibh fringilla convallis. Maecenas quis dui nisi, id lobortis nulla. Phasellus fringilla sem in dolor ornare tempus. Curabitur nec bibendum urna.
-      .span6
-        We'll keep you up to date with the latest from ChefSteps.  We don't like spam, and we don't do shady stuff with your info.
-        = form_tag sign_up_url, :method => :get, class: 'form-inline' do
-          %p= email_field_tag 'email', nil, {class: 'input-signup-email', placeholder: 'Email Address', required: true}
-          %p= submit_tag 'Subscribe Now', class: 'btn btn-primary btn-large', id: 'subscribe-email'
+      .row.section
+        %h2.text-center.text-orange Did we mention its free?
+        .span6
+          %p.lead
+            %strong Some lead title.
+            %br
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi pretium elit nec tortor ultrices rhoncus. Vestibulum malesuada lacus eu nibh fringilla convallis. Maecenas quis dui nisi, id lobortis nulla. Phasellus fringilla sem in dolor ornare tempus. Curabitur nec bibendum urna.
+        .span6
+          We'll keep you up to date with the latest from ChefSteps.  We don't like spam, and we don't do shady stuff with your info.
+          = form_tag sign_up_url, :method => :get, class: 'form-inline' do
+            %p= email_field_tag 'email', nil, {class: 'input-signup-email', placeholder: 'Email Address', required: true}
+            %p= submit_tag 'Subscribe Now', class: 'btn btn-primary btn-large', id: 'subscribe-email'
 
 = content_for :footer do
   = render 'layouts/footer'
