--- a/app/views/recipe_gallery/index.html.haml
+++ b/app/views/recipe_gallery/index.html.haml
@@ -1,10 +1,11 @@
-.row
-  .span12#recipe-gallery
-    %h2 Recipes
-    = paginate @recipes
-    .row.gallery
-      - @recipes.each do |recipe|
-        .span4
-          = link_to activity_path(recipe) do
-            = render 'shared/media_centered', media: recipe, size: 'medium'
-    = paginate @recipes
+.container#main-container
+  .row
+    .span12#recipe-gallery
+      %h2 Recipes
+      = paginate @recipes
+      .row.gallery
+        - @recipes.each do |recipe|
+          .span4
+            = link_to activity_path(recipe) do
+              = render 'shared/media_centered', media: recipe, size: 'medium'
+      = paginate @recipes
