--- a/app/views/techniques/index.html.haml
+++ b/app/views/techniques/index.html.haml
@@ -1,10 +1,11 @@
-.row
-  .span12
-    %h2 Techniques
-    = paginate @techniques
-    .row.gallery
-      - @techniques.each do |technique|
-        .span4
-          = link_to technique do
-            = render 'shared/media_centered', media: technique, size: 'medium'
-    = paginate @techniques
+.container#main-container
+  .row
+    .span12
+      %h2 Techniques
+      = paginate @techniques
+      .row.gallery
+        - @techniques.each do |technique|
+          .span4
+            = link_to technique do
+              = render 'shared/media_centered', media: technique, size: 'medium'
+      = paginate @techniques
