--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -1,5 +1,8 @@
 @import 'mixins'
 
+.top-container
+  margin-top: 56px
+
 #main-container
   margin-top: 70px
   margin-bottom: 60px
@@ -84,6 +87,17 @@ textarea, input[type="text"], input[type="password"], input[type="datetime"], in
 
 .well-opaque
   background-color: rgba(255,255,255,.8)
+
+.well-gradient
+  padding: 20px
+  background: rgb(255,255,255)
+  background: -moz-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(242,242,242,1) 100%)
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,1)), color-stop(100%,rgba(242,242,242,1)))
+  background: -webkit-linear-gradient(top, rgba(255,255,255,1) 0%,rgba(242,242,242,1) 100%)
+  background: -o-linear-gradient(top, rgba(255,255,255,1) 0%,rgba(242,242,242,1) 100%)
+  background: -ms-linear-gradient(top, rgba(255,255,255,1) 0%,rgba(242,242,242,1) 100%)
+  background: linear-gradient(to bottom, rgba(255,255,255,1) 0%,rgba(242,242,242,1) 100%)
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#f2f2f2',GradientType=0 )
 
 .hero-unit
   background: none
