--- a/app/views/home/new_visitor_homepage.html.haml
+++ b/app/views/home/new_visitor_homepage.html.haml
@@ -1,24 +1,27 @@
-.container#main-container
-  .row
-    .span12
+.container-fluid.top-container.well-gradient
+  .row-fluid
+    .container
       .row
-        .span6.offset3
-          = form_tag sign_up_url, :method => :get, class: 'form-inline' do
-            .madlib
-              %span.text-orange
-                Hi ChefSteps,
-              %p
-                I am
-                %span.input-underlined
-                  = text_field_tag 'name', nil, {placeholder: 'name', required: true}
-                and my email is
-                %span.input-underlined
-                  = email_field_tag 'email', nil, {placeholder: 'email', required: true}
-                &#46;&nbsp;&nbsp;
-              %p
-                I want to learn how to be a kick-ass cook.
-            = submit_tag 'Sign Up Now', class: 'btn btn-primary btn-large', id: 'subscribe-email'
+        .span12
+          .row
+            .span6.offset3
+              = form_tag sign_up_url, :method => :get, class: 'form-inline' do
+                .madlib
+                  %span.text-orange
+                    Hi ChefSteps,
+                  %p
+                    I am
+                    %span.input-underlined
+                      = text_field_tag 'name', nil, {placeholder: 'name', required: true}
+                    and my email is
+                    %span.input-underlined
+                      = email_field_tag 'email', nil, {placeholder: 'email', required: true}
+                    &#46;&nbsp;&nbsp;
+                  %p
+                    I want to learn how to be a kick-ass cook.
+                = submit_tag 'Sign Up Now', class: 'btn btn-primary btn-large', id: 'subscribe-email'
 
+.container
   .row
     .span12
       .row.section
@@ -42,7 +45,11 @@
               = image_tag filepicker_gallery_image(@courses.first.first_published_activity.featured_image)
               = @courses.first.title
 
-      .row.section
+.container-fluid.well-gradient
+  .row-fluid
+    %hr
+    .container
+      .row
         %h2.text-center.text-orange Or just take in smaller bits...
         .span6
           %p.lead
@@ -70,18 +77,19 @@
         .span6
           = render 'shared/horizontal_slider', items: @sciences, direction: 'right'
 
-      .row.section
-        %h2.text-center.text-orange Did we mention its free?
-        .span6
-          %p.lead
-            %strong Some lead title.
-            %br
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi pretium elit nec tortor ultrices rhoncus. Vestibulum malesuada lacus eu nibh fringilla convallis. Maecenas quis dui nisi, id lobortis nulla. Phasellus fringilla sem in dolor ornare tempus. Curabitur nec bibendum urna.
-        .span6
-          We'll keep you up to date with the latest from ChefSteps.  We don't like spam, and we don't do shady stuff with your info.
-          = form_tag sign_up_url, :method => :get, class: 'form-inline' do
-            %p= email_field_tag 'email', nil, {class: 'input-signup-email', placeholder: 'Email Address', required: true}
-            %p= submit_tag 'Subscribe Now', class: 'btn btn-primary btn-large', id: 'subscribe-email'
+.container
+  .row.section
+    %h2.text-center.text-orange Did we mention its free?
+    .span6
+      %p.lead
+        %strong Some lead title.
+        %br
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi pretium elit nec tortor ultrices rhoncus. Vestibulum malesuada lacus eu nibh fringilla convallis. Maecenas quis dui nisi, id lobortis nulla. Phasellus fringilla sem in dolor ornare tempus. Curabitur nec bibendum urna.
+    .span6
+      We'll keep you up to date with the latest from ChefSteps.  We don't like spam, and we don't do shady stuff with your info.
+      = form_tag sign_up_url, :method => :get, class: 'form-inline' do
+        %p= email_field_tag 'email', nil, {class: 'input-signup-email', placeholder: 'Email Address', required: true}
+        %p= submit_tag 'Subscribe Now', class: 'btn btn-primary btn-large', id: 'subscribe-email'
 
 = content_for :footer do
   = render 'layouts/footer'
