--- a/app/views/home/new_visitor_homepage.html.haml
+++ b/app/views/home/new_visitor_homepage.html.haml
@@ -3,23 +3,21 @@
     .container
       .row
         .span12
-          .row
-            .span6.offset3
-              = form_tag sign_up_url, :method => :get, class: 'form-inline' do
-                .madlib
-                  %span.text-orange
-                    Hi ChefSteps,
-                  %p
-                    I am
-                    %span.input-underlined
-                      = text_field_tag 'name', nil, {placeholder: 'name', required: true}
-                    and my email is
-                    %span.input-underlined
-                      = email_field_tag 'email', nil, {placeholder: 'email', required: true}
-                    &#46;&nbsp;&nbsp;
-                  %p
-                    I want to learn how to be a kick-ass cook.
-                = submit_tag 'Sign Up Now', class: 'btn btn-primary btn-large', id: 'subscribe-email'
+          = form_tag sign_up_url, :method => :get, class: 'form-inline' do
+            .madlib
+              %span.text-orange
+                Hi ChefSteps,
+              %p
+                I am
+                %span.input-underlined
+                  = text_field_tag 'name', nil, {placeholder: 'name', required: true}
+                and my email is
+                %span.input-underlined
+                  = email_field_tag 'email', nil, {placeholder: 'email', required: true}
+                &#46;&nbsp;&nbsp;
+              %p
+                I want to learn how to be a kick-ass cook.
+            = submit_tag 'Sign Up Now', class: 'btn btn-primary btn-large', id: 'subscribe-email'
 
 .container
   .row
@@ -86,7 +84,8 @@
         %br
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi pretium elit nec tortor ultrices rhoncus. Vestibulum malesuada lacus eu nibh fringilla convallis. Maecenas quis dui nisi, id lobortis nulla. Phasellus fringilla sem in dolor ornare tempus. Curabitur nec bibendum urna.
     .span6
-      We'll keep you up to date with the latest from ChefSteps.  We don't like spam, and we don't do shady stuff with your info.
+      %p.lead
+        We'll keep you up to date with the latest from ChefSteps.  We don't like spam, and we don't do shady stuff with your info.
       = form_tag sign_up_url, :method => :get, class: 'form-inline' do
         %p= email_field_tag 'email', nil, {class: 'input-signup-email', placeholder: 'Email Address', required: true}
         %p= submit_tag 'Subscribe Now', class: 'btn btn-primary btn-large', id: 'subscribe-email'
