fluid container margin fix

--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -7,6 +7,11 @@
   margin-top: 70px
   margin-bottom: 60px
 
+.container-fluid
+  .container
+    .row
+      margin-left: inherit
+
 #slider-container
   background: $offwhite
   .row
