--- a/app/views/home/new_visitor_homepage.html.haml
+++ b/app/views/home/new_visitor_homepage.html.haml
@@ -32,16 +32,16 @@
             = course.title
 
   .row.section
-    .span6.offset1
+    .span6.offset3
       %p.lead 
         %strong And teachers and community to help you succeed.
         %br
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi pretium elit nec tortor ultrices rhoncus. Vestibulum malesuada lacus eu nibh fringilla convallis. Maecenas quis dui nisi, id lobortis nulla. Phasellus fringilla sem in dolor ornare tempus. Curabitur nec bibendum urna.
-    .span4
-      .media-box
-        - if @courses.any?
-          = image_tag filepicker_gallery_image(@courses.first.first_published_activity.featured_image)
-          = @courses.first.title
+    / .span4
+    /   .media-box
+    /     - if @courses.any?
+    /       = image_tag filepicker_gallery_image(@courses.first.first_published_activity.featured_image)
+    /       = @courses.first.title
 
 .container-fluid.well-gradient
   .row-fluid
