--- a/app/assets/stylesheets/horizontal_slider.css.sass
+++ b/app/assets/stylesheets/horizontal_slider.css.sass
@@ -2,6 +2,7 @@
   position: relative
   height: 248px
   overflow: hidden
+  z-index: 1
   .horizontal-slider-wrap
     height: 248px
     position: relative
