--- a/app/assets/stylesheets/media_objects.css.sass
+++ b/app/assets/stylesheets/media_objects.css.sass
@@ -11,11 +11,19 @@
   font-weight: bold
   margin-bottom: 20px
   color: black
+  -webkit-transition: background 300ms, border-color 300ms
+  -moz-transition: background 300ms, border-color 300ms
+  -o-transition: background 300ms, border-color 300ms
+  transition: background 300ms, border-color 300ms
   img
     width: 100%
     margin-bottom: 10px
   a
     color: black
+    -webkit-transition: color 300ms
+    -moz-transition: color 300ms
+    -o-transition: color 300ms
+    transition: color 300ms
 
   &:before, &:after
     content: ""
@@ -40,6 +48,13 @@
     -ms-transform: rotate(-2deg)
     -o-transform: rotate(-2deg)
     transform: rotate(-2deg)
+  &:hover
+    background: $orange
+    border-color: $dark_orange
+    cursor: pointer
+    a
+      color: white
+      text-decoration: none
 
 .media-box-medium
   width: 300px
