--- a/app/views/home/new_visitor_homepage.html.haml
+++ b/app/views/home/new_visitor_homepage.html.haml
@@ -27,9 +27,7 @@
     - if @courses.any?
       - @courses.each do |course|
         .span4
-          .media-box
-            = image_tag filepicker_gallery_image(course.first_published_activity.featured_image)
-            = course.title
+          = render 'shared/media_box_2', title: course.title, image: course.first_published_activity.featured_image
 
   .row.section
     .span6.offset3
