--- a/app/views/shared/_horizontal_slider.html.haml
+++ b/app/views/shared/_horizontal_slider.html.haml
@@ -1,11 +1,8 @@
 .horizontal-slider{data: {direction: direction}}
   .horizontal-slider-wrap
     - items.each do |item|
-      .media-box.media-box-medium.pull-left
-        = link_to activity_path(item) do
-          - if item.featured_image
-            = image_tag filepicker_gallery_image(item.featured_image)
-            = truncate(item.title, length: 38)
+      .media-box-medium.pull-left
+        = render 'shared/media_box', url: activity_path(item), title: item.title, image: item.featured_image
   %div{class: "horizontal-slider-btn-#{direction} btn btn-circle"}
     %i{class: "icon-chevron-#{direction}"}
   %div{class: "horizontal-slider-shadow-overlay-#{direction}"}
