media box updates

--- a/app/views/shared/_media_box.html.haml
+++ b/app/views/shared/_media_box.html.haml
@@ -1,4 +1,4 @@
-.media-box
+%div{class: "media-box media-box-#{size} pull-left"}
   = link_to url do
     - if image
       = image_tag filepicker_gallery_image(image)
