--- a/app/views/shared/_horizontal_slider.html.haml
+++ b/app/views/shared/_horizontal_slider.html.haml
@@ -1,8 +1,7 @@
 .horizontal-slider{data: {direction: direction}}
   .horizontal-slider-wrap
     - items.each do |item|
-      .media-box-medium.pull-left
-        = render 'shared/media_box', url: activity_path(item), title: item.title, image: item.featured_image
+      = render 'shared/media_box', size: 'medium', url: activity_path(item), title: item.title, image: item.featured_image
   %div{class: "horizontal-slider-btn-#{direction} btn btn-circle"}
     %i{class: "icon-chevron-#{direction}"}
   %div{class: "horizontal-slider-shadow-overlay-#{direction}"}
