progress but thinking I should move to angular

--- a/app/views/activities/_edit_toolbar.haml
+++ b/app/views/activities/_edit_toolbar.haml
@@ -40,7 +40,7 @@
     %button.close{type: 'button', data: {dismiss: 'modal'}}
       x
     .modal-body
-      Do you really want to cancel all of your changes?
+      Do you really want to abandon all of your changes?
     .modal-footer
       %button.btn.btn-success{data: {dismiss: 'modal'}}
         No !!
