--- a/app/views/activities/get_show_partial.js.haml
+++ b/app/views/activities/get_show_partial.js.haml
@@ -1,5 +1,6 @@
-sel = '*[data-edit_id="' + "#{j edit_id}" + '"]'
+-if @last_edit_version
+  window.csLastEditActivityVersion = #{@last_edit_version}
+sel = '*[data-edit_id="' + "#{j @edit_id}" + '"]'
 elem = $(sel).get()
-$(elem).fadeOut('fast', function() { $(this).html("#{j render partial: 'show_' + partial_name}").fadeIn()})
+$(elem).fadeOut('fast', function() { $(this).html("#{j render partial: 'show_' + @partial_name}").fadeIn()})
 $(elem).promise().done(function() { wysiwygDeactivatedCallback(elem) })
-
