fix the responsive nav to show dropdown text on light backgrounds

--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -1052,6 +1052,11 @@ h1, h2, h3, h4
   .activity-description
     height: 160px
 
+  .navbar .nav > li > .dropdown-menu li a 
+    color: #333
+    &:hover
+      color: #fff
+
 /* Landscape phone to portrait tablet */
 @media (max-width: 767px)
   #hero-container
@@ -1110,6 +1115,11 @@ h1, h2, h3, h4
 
   .nav-item-border
     display: none
+
+  .navbar .nav > li > .dropdown-menu li a 
+    color: #333
+    &:hover
+      color: #fff
  
 /* Landscape phones and down */
 @media (max-width: 480px)
@@ -1138,3 +1148,9 @@ h1, h2, h3, h4
         width: 15%
       .step-content
         width: 85%
+
+  .navbar .nav > li > .dropdown-menu li a 
+    color: white
+    font-weight: normal
+    &:hover
+      color: #fff
