update chefsteps orange

--- a/app/assets/stylesheets/_mixins.css.sass
+++ b/app/assets/stylesheets/_mixins.css.sass
@@ -30,7 +30,8 @@
   -o-transition: $value
 
 /* Colors */
-$orange: #DB7354
+$orange: #e25f25
+//$orange: #DB7354
 $dark-orange: #D25029
 $darker-orange: #B84724
 $blue: #006DCC
