--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -14,7 +14,7 @@
     - if @courses.any?
       - @courses.each do |course|
         .span4
-          = render 'shared/media_box_2', title: course.title, image: course.first_published_activity.featured_image
+          = render 'shared/media_box_2', url: course_path(course), title: course.title, image: course.first_published_activity.featured_image
 
   .row.section
     .span6.offset3
